🩹 fix: Adjust margin of checkbox indicator for better alignment

--- a/src/components/options/Option.module.css
+++ b/src/components/options/Option.module.css
@@ -43,7 +43,7 @@
   display: block;
   height: 85%;
   aspect-ratio: 1/1;
-  margin: 5%;
+  margin: 5.5%;
   background-color: white;
   border-radius: 50%;
   transition: transform 0.2s;
